frontend/test/should_fail/array_medUnordered.grg
function medUnordered(ref a:array<string>) : double
{
	return(a.medUnordered());
}